--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
 
 
-  <section id="testimonial"class="mt-5">
+  <section id="testimonial" class="mt-5">
     <div class="container">
       <!-- <h4 class="text-center">Testimonials</h4> -->
         <h4 class="text-center">Testimonials</h4>
@@ -348,7 +348,7 @@
         <div class="form-floating mb-3 w-100">
 
           <ion-icon name="chatbox-sharp" class="icon-textarea"></ion-icon>
-          <textarea class="form-control" placeholder="Leave a message" col="4" id="floatingTextArea" style="height: 120px;width: 100%;" ></textarea>
+          <textarea class="form-control" placeholder="Leave a message" id="floatingTextArea" style="height: 120px;width: 100%;" ></textarea>
           <label for="floatingTextArea">Message</label>
 
 
